--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -22,9 +22,9 @@
     "src"
   ],
   "dependencies": {
-    "cronapp-framework-js": "2.3.0",
-    "cronapp-common-js": "2.3.1",
-    "cronapi-js": "2.3.0",
-    "cronapp-lib-js": "2.3.0"
+    "cronapp-framework-js": "ecc9002c70fe56b45682795c9fd773cba0cbee01",
+    "cronapp-common-js": "e283c073564f61d2952d058debca622da40fa917",
+    "cronapi-js": "a53ed50a298128f6d50e6f85a5eeee5772816ca9",
+    "cronapp-lib-js": "9afa55ff4fd94e152889447173e5b5b1f830815f"
   }
 }
